# vmpc-juce

./: .clang-format  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  ExportOptions.plist  README.md  ResourceBundling.cmake  build-ios.sh  build.sh  ciwi-project.yaml  conanfile.py  macos-codesign-details-extractor.py  package.sh  plugin-compatibility-matrix-2.md  plugin-compatibility-matrix.md  resources.rc  vmpc.jucer
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Modules/raw_keyboard_input/: raw_keyboard_input.h  (+2 more)
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneFilter.h  StandaloneFilterWindow.h
au-utils/: bump-version.sh  ceremony.sh  refresh-au.sh
cmake/: ASIOSDK.cmake  CMakeRC.cmake  ClangFormat.cmake  FetchContentCache.cmake  Findccache.cmake  ResourceBundling.cmake
dsp/: BufferedLagrange.cpp  BufferedLagrange.h
gui/: Constants.h  DataWheelControl.h  KnobControl.cpp  KnobControl.hpp  Led.hpp  LedControl.hpp  PadControl.cpp  PadControl.hpp  SliderControl.cpp  VmpcComponent.h
src/: CMakeLists.txt  CMakeRC.cmake  ConfigurationHelpers.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  ResourceBundling.cmake  StandaloneFilter.cpp
src/gui/: Constants.h  InputCatcherControl.h  KnobControl.hpp  Led.hpp
src/main/: .VmpcEditor.cpp.swp  AudioMidiSettingsComponent.cpp  AudioMidiSettingsComponent.h  AudioMidiSettingsComponent.hpp  FloatUtil.hpp  InitialWindowDimensions.hpp  InitialWindowDimensions.mm  JuceToMpcMidiEventConvertor.hpp  KeyboardHandler.cpp  KeyboardHandler.h  LCD-screens.cpp  MpcToJuceMidiEventConvertor.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PropertiesFileOptions.hpp  RequiredResourcesMissingEditor.cpp  RequiredResourcesMissingEditor.hpp  ResourceUtil.cpp  ResourceUtil.h  StandaloneApp.cpp  StandaloneApp.hpp  StandaloneFilter.cpp  StandaloneFilter.h  StandaloneFilter.hpp  StandaloneFilterWindow.h  StandaloneFilterWindow.hpp  VmpcBitmapEditor.cpp  VmpcBitmapEditor.hpp  VmpcEditor.cpp  VmpcEditor.h  VmpcEditor.hpp  VmpcJuceRequiredResourceIntegrity.cpp  VmpcJuceRequiredResourceIntegrity.hpp  VmpcJuceResourceUtil.cpp  VmpcJuceResourceUtil.hpp  VmpcParameter.cpp  VmpcParameter.h  VmpcParameters.cpp  (+14 more)
src/main/bitmap-gui/: AuxLCD.cpp  AuxLCD.hpp  AuxLCDWindow.cpp  AuxLCDWindow.hpp  Background.cpp  ButtonControl.cpp  ContentComponent.cpp  DataWheelControl.cpp  KnobControl.hpp  LCDControl.cpp  LCDControl.hpp  TopRightMenu.cpp  VmpcAuxLcdLookAndFeel.cpp
src/main/gui/: AuxLCD.cpp  AuxLCD.h  AuxLCD.hpp  AuxLCDWindow.cpp  AuxLCDWindow.h  AuxLCDWindow.hpp  AuxLcd.cpp  AuxLcd.hpp  AuxLcdWindow.cpp  AuxLcdWindow.hpp  Background.cpp  Background.h  ButtonControl.cpp  ButtonControl.hpp  Constants.cpp  Constants.h  ContentComponent.cpp  ContentComponent.h  DataWheel.hpp  DataWheelControl.cpp  DataWheelControl.h  FlexBoxWrapper.cpp  GridWrapper.cpp  ImportDocumentUrlProcessor.cpp  ImportDocumentUrlProcessor.h  IosDocumentBrowser.h  IosDocumentBrowser.mm  IosExportDocumentBrowser.h  IosExportDocumentBrowser.mm  IosUIWindowWithExportActivityView.mm  JOrLShape.hpp  KbEditor.cpp  KbEditor.h  KeyEventListener.cpp  KeyEventListener.h  KeyboardButton.hpp  Knob.hpp  KnobControl.cpp  KnobControl.hpp  LCDControl.cpp  (+38 more)
src/main/gui/bitmap/: Background.cpp  Background.hpp  ButtonControl.cpp  ButtonControl.hpp  Constants.cpp  Constants.hpp  ContentComponent.cpp  ContentComponent.hpp  DataWheelControl.cpp  DataWheelControl.hpp  ImportDocumentUrlProcessor.cpp  IosImportDocumentBrowser.mm  KeyboardButton.hpp  KnobControl.cpp  KnobControl.hpp  LCDControl.cpp  LCDControl.hpp  Led.cpp  Led.hpp  LedControl.cpp  LedControl.hpp  PadControl.cpp  PadControl.hpp  SliderControl.cpp  SliderControl.hpp  TopRightMenu.cpp  TopRightMenu.hpp  VmpcComponent.hpp  VmpcTooltipComponent.cpp  VmpcTooltipComponent.hpp
src/main/gui/focus/: FocusHelper.h  FocusHelper.hpp  FocusHelper_ios.mm  FocusHelper_linux.cpp  FocusHelper_macos.mm  FocusHelper_win32.cpp
src/main/gui/ios/: ImportDocumentUrlProcessor.cpp  ImportDocumentUrlProcessor.hpp  IosImportDocumentBrowser.mm  IosUIWindowWithExportActivityView.mm  RecordingManager.mm
src/main/gui/macos/: CopyFileWindow.h  CopyFileWindow.mm  ImportDocumentUrlProcessor.cpp  ImportDocumentUrlProcessor.hpp  MacImportDocumentBrowser.mm  MacOSNSWindowWithExportActivityView.mm  RecordingManager.mm
src/main/gui/vector/: About.hpp  AboutBorder.hpp  AboutScrollBar.hpp  AdditionalShadowComponentsProvider.hpp  AnimatedButtonStyle.hpp  CloseAbout.hpp  Constants.cpp  Constants.hpp  CursorKeys.hpp  DataWheel.hpp  DataWheelLines.hpp  Disclaimer.hpp  DraggableSvgComponent.h  DraggableSvgComponent.hpp  FlexBoxWrapper.cpp  FlexBoxWrapper.hpp  GridWrapper.cpp  GridWrapper.hpp  InfoTooltip.hpp  JOrLShape.hpp  KeyComponent.hpp  KeyTooltip.hpp  Knob.hpp  LabelComponent.hpp  Lcd.cpp  Lcd.hpp  Led.hpp  LedController.cpp  LedController.hpp  LineFlankedLabel.hpp  Menu.hpp  MpcHardwareMouseListener.cpp  MpcHardwareMouseListener.hpp  MpcInputUtil.h  MpcInputUtil.hpp  Node.hpp  NumKey.hpp  Pad.cpp  Pad.hpp  PadTimer.cpp  (+25 more)
src/main/standalone/: AudioDeviceManager.cpp  AudioDeviceManager.hpp  AudioDeviceSettingsPanel.cpp  AudioDeviceSettingsPanel.hpp  AudioDeviceSetupDetails.hpp  AudioMidiSettingsComponent.cpp  AudioMidiSettingsComponent.hpp  ChannelSelectorListBox.cpp  ChannelSelectorListBox.hpp  DeviceSelectorComponent.cpp  DeviceSelectorComponent.hpp  DeviceSelectorComponentLookAndFeel.hpp  InputLevelMeter.hpp  MidiInputListBox.hpp  MidiOutputSelector.hpp  PropertiesFileOptions.hpp  StandaloneApp.cpp  StandaloneApp.hpp  StandaloneAppWindow.hpp  Utils.hpp  VmpcStandaloneDeviceSelectorComponent.cpp  VmpcStandaloneDeviceSelectorComponent.hpp  VmpcStandalonePlayer.cpp  VmpcStandalonePlayer.hpp
src/main/utils/: ComponentUtils.hpp
src/main/vf_freetype/: vf_FreeTypeFaces.cpp  vf_FreeTypeFaces.h
src/main/vf_freetype/FreeTypeAmalgam/: COMMITLOG  FreeTypeAmalgam.h  README.md
src/test/: VmpcIntegrationTest.cpp
vmpc/: .gitignore  vmpc.jucer  vmpc.jucer.bk  vmpc.jucer.bk-win
(+79 files in other folders)
